--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
     "description": "simplex-noise is a fast simplex noise implementation in Javascript.",
     "homepage": "https://github.com/jwagner/simplex-noise.js",
     "author": "Jonas Wagner <jonas@29a.ch> (http://29a.ch/)",
-    "main": "./simplex-noise"
+    "main": "./simplex-noise",
+    "repository" : {
+        "type" : "git",
+        "url" : "https://github.com/jwagner/simplex-noise.js.git"
+     }
 }
