--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-    "name": "simplex-noise",
-    "version": "2.1.1",
-    "description": "simplex-noise is a fast simplex noise implementation in Javascript.",
-    "homepage": "https://github.com/jwagner/simplex-noise.js",
-    "author": "Jonas Wagner <jonas@29a.ch> (http://29a.ch/)",
-    "main": "./simplex-noise",
-    "repository" : {
-        "type" : "git",
-        "url" : "https://github.com/jwagner/simplex-noise.js.git"
-     }
+  "name": "simplex-noise",
+  "version": "2.1.1",
+  "description": "simplex-noise is a fast simplex noise implementation in Javascript.",
+  "homepage": "https://github.com/jwagner/simplex-noise.js",
+  "author": "Jonas Wagner <jonas@29a.ch> (http://29a.ch/)",
+  "main": "./simplex-noise",
+  "devDependencies": {
+    "buster": "~0.6.2",
+    "benchmark": "~1.0.0",
+    "microtime": "~0.3.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jwagner/simplex-noise.js.git"
+  }
 }
