--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
   "name": "simplex-noise",
   "version": "2.1.1",
-  "description": "simplex-noise is a fast simplex noise implementation in Javascript.",
+  "description": "simplex-noise is a fast simplex noise implementation in Javascript. Works in node and in the browser.",
   "homepage": "https://github.com/jwagner/simplex-noise.js",
   "author": "Jonas Wagner <jonas@29a.ch> (http://29a.ch/)",
   "main": "./simplex-noise",
+
   "devDependencies": {
     "buster": "~0.7.8",
     "benchmark": "~1.0.0",
     "microtime": "~0.3.1"
   },
+  "bugs": {
+      "url": "https://github.com/jwagner/simplex-noise.js/issues"
+  },
+  "keywords": [
+      "noise",
+      "random",
+      "simplex",
+      "plasma",
+      "procedural",
+      "gfx",
+      "generative"
+  ],
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/jwagner/simplex-noise.js.git"
