--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
 
   "devDependencies": {
     "buster": "~0.7.8",
-    "benchmark": "~1.0.0",
-    "microtime": "~0.3.1"
+    "buster": "~0.6.2",
+    "benchmark": "~2.1.0",
+    "microtime": "~2.0.0"
   },
   "bugs": {
       "url": "https://github.com/jwagner/simplex-noise.js/issues"
