--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
 
   "devDependencies": {
     "buster": "~0.7.8",
-    "buster": "~0.6.2",
     "benchmark": "~2.1.0",
     "microtime": "~2.0.0"
   },
@@ -28,5 +27,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/jwagner/simplex-noise.js.git"
+  },
+  "scripts": {
+    "test": "./node_modules/buster/bin/buster-test"
   }
 }
