--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "homepage": "https://github.com/jwagner/simplex-noise.js",
   "author": "Jonas Wagner <jonas@29a.ch> (http://29a.ch/)",
   "main": "./simplex-noise",
-
   "devDependencies": {
+    "benchmark": "~2.1.0",
     "buster": "~0.7.8",
-    "benchmark": "~2.1.0"
+    "chai": "^3.5.0"
   },
   "bugs": {
-      "url": "https://github.com/jwagner/simplex-noise.js/issues"
+    "url": "https://github.com/jwagner/simplex-noise.js/issues"
   },
   "keywords": [
-      "noise",
-      "random",
-      "simplex",
-      "plasma",
-      "procedural",
-      "gfx",
-      "generative"
+    "noise",
+    "random",
+    "simplex",
+    "plasma",
+    "procedural",
+    "gfx",
+    "generative"
   ],
   "license": "MIT",
   "repository": {
@@ -28,6 +28,6 @@
     "url": "https://github.com/jwagner/simplex-noise.js.git"
   },
   "scripts": {
-    "test": "./node_modules/buster/bin/buster-test"
+    "test": "mocha"
   }
 }
