--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "main": "./simplex-noise",
   "devDependencies": {
     "benchmark": "~2.1.0",
-    "buster": "~0.7.8",
-    "chai": "^3.5.0"
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
   },
   "bugs": {
     "url": "https://github.com/jwagner/simplex-noise.js/issues"
