--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Jonas Wagner <jonas@29a.ch> (http://29a.ch/)",
   "main": "./simplex-noise",
   "devDependencies": {
+    "alea": "0.0.9",
     "benchmark": "~2.1.0",
     "chai": "^3.5.0",
     "mocha": "^3.2.0"
@@ -19,6 +20,7 @@
     "simplex",
     "plasma",
     "procedural",
+    "generation",
     "gfx",
     "generative"
   ],
@@ -28,6 +30,7 @@
     "url": "https://github.com/jwagner/simplex-noise.js.git"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "jscs simplex-noise.js && jshint simplex-noise.js && mocha",
+    "benchmark": "node ./perf/benchmark.js"
   }
 }
