Add jscs, jshint as dev dependencies

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "alea": "0.0.9",
     "benchmark": "~2.1.0",
     "chai": "^3.5.0",
+    "jscs": "^3.0.7",
+    "jshint": "^2.9.4",
     "mocha": "^3.2.0"
   },
   "bugs": {
