--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "simplex-noise",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "simplex-noise is a fast simplex noise implementation in Javascript. Works in node and in the browser.",
   "homepage": "https://github.com/jwagner/simplex-noise.js",
   "author": "Jonas Wagner <jonas@29a.ch> (http://29a.ch/)",
   "main": "./simplex-noise",
+  "files": "simplex-noise.js",
   "devDependencies": {
     "alea": "0.0.9",
     "benchmark": "~2.1.0",
