--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "alea": "0.0.9",
     "benchmark": "~2.1.4",
     "chai": "^4.1.2",
-    "jscs": "^3.0.7",
+    "eslint": "^4.17.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^6.0.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "jshint": "^2.9.5",
     "mocha": "^5.0.0"
   },
@@ -33,7 +38,7 @@
     "url": "https://github.com/jwagner/simplex-noise.js.git"
   },
   "scripts": {
-    "test": "jscs simplex-noise.js && jshint simplex-noise.js && mocha",
+    "test": "eslint simplex-noise.js && jshint simplex-noise.js && mocha",
     "benchmark": "node ./perf/benchmark.js"
   }
 }
