--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "homepage": "https://github.com/jwagner/simplex-noise.js",
   "author": "Jonas Wagner <jonas@29a.ch> (http://29a.ch/)",
   "main": "./simplex-noise",
-  "files": "simplex-noise.js",
+  "files": [
+    "simplex-noise.js"
+  ],
   "devDependencies": {
     "alea": "0.0.9",
     "benchmark": "~2.1.4",
