--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "simplex-noise.js"
   ],
   "devDependencies": {
-    "alea": "0.0.9",
+    "alea": "^1.0.0",
     "benchmark": "~2.1.4",
-    "chai": "^4.1.2",
-    "eslint": "^4.17.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^6.0.0",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "mocha": "^5.0.0"
+    "chai": "^4.2.0",
+    "eslint": "^5.15.3",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "mocha": "^6.0.2"
   },
   "bugs": {
     "url": "https://github.com/jwagner/simplex-noise.js/issues"
