compile-esm: babel compiles es modules
introduce babel compilation to web-ready es modules, which are made
available in the "dist-esm" directory

summary of changes:

 [.gitignore] modified
  added "/dist*" to ignore the "dist-esm" directory

 [babel.config.js] added
  configures the babel esm compilation

 [index.html] added
  use `npm start` and browse to http://localhost:8080
  to check that the es module is web-ready
  an automated build step would be better

 [package.json] modified
  move scripts block closer to top of package.json
  add field "module", directs browsers to the es module distribution
  add "dist-esm" to the files array
  add script "prepare", runs build and tests on each install/publish
  add script "start", runs local http-server to test index.html
  add script "clean", deletes the "dist-esm" directory
  add script "compile-esm", babel generates es modules in "dist-esm"

--- a/package.json
+++ b/package.json
@@ -5,11 +5,24 @@
   "homepage": "https://github.com/jwagner/simplex-noise.js",
   "author": "Jonas Wagner <jonas@29a.ch> (http://29a.ch/)",
   "main": "./simplex-noise",
+  "module": "dist-esm/simplex-noise.js",
+  "scripts": {
+    "prepare": "run-s clean compile-esm test",
+    "start": "http-server",
+    "clean": "rimraf dist-esm",
+    "compile-esm": "babel simplex-noise.js --out-dir dist-esm",
+    "test": "eslint simplex-noise.js && mocha",
+    "benchmark": "node ./perf/benchmark.js"
+  },
   "files": [
+    "dist-esm",
     "simplex-noise.js"
   ],
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.4.0",
     "alea": "^1.0.0",
+    "babel-plugin-transform-commonjs": "^1.1.5",
     "benchmark": "~2.1.4",
     "chai": "^4.2.0",
     "eslint": "^5.15.3",
@@ -18,7 +31,10 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "mocha": "^6.0.2"
+    "http-server": "^0.11.1",
+    "mocha": "^6.0.2",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.3"
   },
   "bugs": {
     "url": "https://github.com/jwagner/simplex-noise.js/issues"
@@ -37,9 +53,5 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/jwagner/simplex-noise.js.git"
-  },
-  "scripts": {
-    "test": "eslint simplex-noise.js && mocha",
-    "benchmark": "node ./perf/benchmark.js"
   }
 }
