--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "description": "simplex-noise is a fast simplex noise implementation in Javascript. Works in node and in the browser.",
   "homepage": "https://github.com/jwagner/simplex-noise.js",
   "author": "Jonas Wagner <jonas@29a.ch> (http://29a.ch/)",
-  "main": "./simplex-noise",
+  "main": "./simplex-noise.js",
+  "type": "module",
   "files": "simplex-noise.js",
   "devDependencies": {
-    "alea": "0.0.9",
     "benchmark": "~2.1.4",
     "chai": "^4.2.0",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "mocha": "^5.2.0"
+    "eslint": "^7.16.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "mocha": "^8.2.1"
   },
   "bugs": {
     "url": "https://github.com/jwagner/simplex-noise.js/issues"
@@ -39,5 +39,8 @@
   "scripts": {
     "test": "eslint simplex-noise.js && mocha",
     "benchmark": "node ./perf/benchmark.js"
+  },
+  "dependencies": {
+    "alea": "^1.0.0"
   }
 }
