--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "alea": "^1.0.0",
     "benchmark": "^2.1.4",
     "chai": "^4.3.4",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^11.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.1",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "mocha": "^9.1.0"
+    "eslint-plugin-mocha": "^9.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "mocha": "^9.1.0",
+    "pngjs": "^6.0.0"
   },
   "bugs": {
     "url": "https://github.com/jwagner/simplex-noise.js/issues"
