--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "devDependencies": {
     "@parcel/packager-ts": "^2.0.0-rc.0",
     "@parcel/transformer-typescript-types": "^2.0.0-rc.0",
+    "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "@types/pngjs": "^6.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
     "alea": "^1.0.0",
     "benchmark": "^2.1.4",
     "chai": "^4.3.4",
