--- a/package.json
+++ b/package.json
@@ -1,26 +1,35 @@
 {
   "name": "simplex-noise",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "description": "simplex-noise is a fast simplex noise implementation in Javascript. Works in node and in the browser.",
   "homepage": "https://github.com/jwagner/simplex-noise.js",
   "author": "Jonas Wagner <jonas@29a.ch> (http://29a.ch/)",
   "source": "simplex-noise.ts",
-  "main": "dist/simplex-noise.js",
-  "module": "dist/simplex-noise.mjs",
-  "types": "dist/types.d.ts",
+  "main": "dist/cjs/commonjs-wrapper.js",
+  "module": "dist/esm/simplex-noise.js",
+  "exports": {
+    "require": "./dist/cjs/commonjs-wrapper.js",
+    "import": "./dist/esm/simplex-noise.js"
+  },
   "sideEffects": false,
   "files": [
-    "dist/simplex-noise.js",
-    "dist/simplex-noise.js.map",
-    "dist/simplex-noise.mjs",
-    "dist/simplex-noise.mjs.map",
-    "dist/types.d.ts"
+    "dist/esm/package.json",
+    "dist/esm/simplex-noise.js",
+    "dist/esm/simplex-noise.js.map",
+    "dist/esm/simplex-noise.d.ts",
+    "dist/cjs/simplex-noise.js",
+    "dist/cjs/simplex-noise.js.map",
+    "dist/cjs/simplex-noise.d.ts",
+    "dist/cjs/commonjs-wrapper.js",
+    "dist/cjs/commonjs-wrapper.js.map",
+    "dist/cjs/commonjs-wrapper.d.ts"
   ],
   "devDependencies": {
     "@parcel/packager-ts": "^2.0.0-rc.0",
     "@parcel/transformer-typescript-types": "^2.0.0-rc.0",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
+    "@types/node": "^16.7.1",
     "@types/pngjs": "^6.0.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
@@ -36,7 +45,10 @@
     "parcel": "^2.0.0-rc.0",
     "pngjs": "^6.0.0",
     "ts-node": "^10.2.1",
-    "typescript": "^4.3.5"
+    "typedoc": "^0.21.6",
+    "typescript": "^4.3.5",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0"
   },
   "bugs": {
     "url": "https://github.com/jwagner/simplex-noise.js/issues"
@@ -59,7 +71,8 @@
   "scripts": {
     "start": "parcel test/visual.html",
     "test": "eslint simplex-noise.ts && mocha && ./test/module-compatibility.sh",
-    "build": "parcel build",
+    "build": "./build.sh",
+    "docs": "typedoc --out public/docs simplex-noise.ts",
     "prepare": "npm run-script build",
     "benchmark": "parcel build && node ./perf/benchmark.js"
   }
