--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "html-webpack-plugin": "^5.3.2",
     "mocha": "^9.1.0",
     "parcel": "^2.0.0-rc.0",
     "pngjs": "^6.0.0",
