--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "fast-simplex-noise": "^4.0.0",
     "html-webpack-plugin": "^5.3.2",
     "mocha": "^9.1.0",
     "parcel": "^2.0.0-rc.0",
@@ -75,6 +76,6 @@
     "build": "./build.sh",
     "docs": "typedoc --excludePrivate --out public/docs simplex-noise.ts",
     "prepare": "npm run-script build",
-    "benchmark": "parcel build && node ./perf/benchmark.js"
+    "benchmark": "npm run build && node ./perf/index.js"
   }
 }
