--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "simplex-noise",
-  "version": "3.0.1",
+  "version": "4.0.0",
   "description": "simplex-noise is a fast simplex noise implementation in Javascript. Works in node and in the browser.",
   "homepage": "https://github.com/jwagner/simplex-noise.js",
   "author": "Jonas Wagner <jonas@29a.ch> (http://29a.ch/)",
-  "main": "dist/cjs/commonjs-wrapper.js",
+  "main": "dist/cjs/simplex-noise.js",
   "module": "dist/esm/simplex-noise.js",
+  "types": "./dist/esm/simplex-noise.d.ts",
   "exports": {
-    "require": "./dist/cjs/commonjs-wrapper.js",
+    "require": "./dist/cjs/simplex-noise.js",
     "import": "./dist/esm/simplex-noise.js"
   },
   "sideEffects": false,
@@ -19,38 +20,35 @@
     "dist/cjs/simplex-noise.js",
     "dist/cjs/simplex-noise.js.map",
     "dist/cjs/simplex-noise.d.ts",
-    "dist/cjs/commonjs-wrapper.js",
-    "dist/cjs/commonjs-wrapper.js.map",
-    "dist/cjs/commonjs-wrapper.d.ts",
     "simplex-noise.ts"
   ],
   "devDependencies": {
-    "@parcel/packager-ts": "^2.0.0-rc.0",
-    "@parcel/transformer-typescript-types": "^2.0.0-rc.0",
-    "@types/chai": "^4.2.21",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.7.1",
+    "@parcel/packager-ts": "^2.6.0",
+    "@parcel/transformer-typescript-types": "^2.6.0",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.39",
     "@types/pngjs": "^6.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
-    "alea": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "alea": "^1.0.1",
     "benchmark": "^2.1.4",
-    "chai": "^4.3.4",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "html-webpack-plugin": "^5.3.2",
-    "mocha": "^9.1.0",
-    "parcel": "^2.0.0-rc.0",
+    "chai": "^4.3.6",
+    "eslint": "^8.17.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mocha": "^10.0.0",
+    "parcel": "^2.6.0",
     "pngjs": "^6.0.0",
     "source-map-loader": "^3.0.1",
-    "ts-node": "^10.4.0",
-    "typedoc": "^0.22.10",
-    "typescript": "^4.5.4",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0"
+    "ts-node": "^10.8.1",
+    "typedoc": "^0.22.17",
+    "typescript": "^4.7.3",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.9.2"
   },
   "bugs": {
     "url": "https://github.com/jwagner/simplex-noise.js/issues"
@@ -77,5 +75,8 @@
     "docs": "typedoc --excludePrivate --out public/docs simplex-noise.ts",
     "prepare": "npm run-script build",
     "benchmark": "parcel build && node ./perf/benchmark.js"
+  },
+  "dependencies": {
+    "microtime": "^3.0.0"
   }
 }
