Coverage improvements & report

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,3 +24,8 @@ jobs:
       - run: npm ci
       - run: npm test
       - run: npm run-script build
+      - run: |
+        echo '# Coverage' >> $GITHUB_STEP_SUMMARY
+        echo '```' >> $GITHUB_STEP_SUMMARY
+        nyc report >> $GITHUB_STEP_SUMMARY
+        echo '```' >> $GITHUB_STEP_SUMMARY
