--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "html-webpack-plugin": "^5.5.0",
     "microtime": "^3.1.0",
     "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
     "parcel": "^2.6.0",
     "pngjs": "^6.0.0",
     "source-map-loader": "^3.0.1",
@@ -71,7 +72,8 @@
   },
   "scripts": {
     "start": "parcel test/visual.html",
-    "test": "eslint simplex-noise.ts && mocha && ./test/module-compatibility.sh",
+    "test": "eslint simplex-noise.ts && nyc mocha && ./test/module-compatibility.sh",
+    "coverage": "nyc report",
     "build": "./build.sh",
     "docs": "typedoc --excludePrivate --out public/docs simplex-noise.ts",
     "prepare": "npm run-script build",
