--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "parcel": "^2.6.2",
     "pngjs": "^6.0.0",
     "source-map-loader": "^4.0.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.16.2",
     "typedoc": "^0.23.8",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
